crates/yaml-db/tests/snapshots/golden_tests__disciplines_yaml_custom.snap
---
source: crates/yaml-db/tests/golden_tests.rs
expression: yaml_content
---
disciplines:
- name: ml-ops
  display_name: ML/Ops
  icon: Brain
  color: violet
  acronym: MLOP
- name: data-eng
  display_name: Data Engineering
  icon: Database
  color: emerald
  acronym: DENG
