crates/yaml-db/tests/snapshots/golden_tests__features_yaml.snap
---
source: crates/yaml-db/tests/golden_tests.rs
expression: yaml_content
---
features:
- name: authentication
  display_name: Authentication
  created: 2026-02-05
- name: user-profile
  display_name: User Profile
  created: 2026-02-05
