crates/yaml-db/tests/snapshots/golden_tests__full_db_disciplines.snap
---
source: crates/yaml-db/tests/golden_tests.rs
expression: disciplines_yaml
---
disciplines:
- name: frontend
  display_name: Frontend
  icon: Monitor
  color: '#3b82f6'
- name: backend
  display_name: Backend
  icon: Server
  color: '#8b5cf6'
- name: wiring
  display_name: Wiring
  icon: Cable
  color: '#06b6d4'
- name: database
  display_name: Database
  icon: Database
  color: '#10b981'
- name: testing
  display_name: Testing
  icon: FlaskConical
  color: '#f59e0b'
- name: infra
  display_name: Infrastructure
  icon: Cloud
  color: '#6366f1'
- name: security
  display_name: Security
  icon: Shield
  color: '#ef4444'
- name: docs
  display_name: Documentation
  icon: BookOpen
  color: '#14b8a6'
- name: design
  display_name: Design
  icon: Palette
  color: '#ec4899'
- name: api
  display_name: API
  icon: Plug
  color: '#84cc16'
