crates/yaml-db/tests/snapshots/golden_tests__full_db_tasks.snap
---
source: crates/yaml-db/tests/golden_tests.rs
expression: tasks_yaml
---
tasks:
- id: 1
  feature: user-management
  discipline: backend
  title: Create user API endpoints
  description: Implement CRUD operations for users
  status: pending
  priority: high
  tags:
  - api
  created: 2026-02-05
  acceptance_criteria:
  - POST /users creates a user
  - GET /users/:id returns user
- id: 2
  feature: user-management
  discipline: frontend
  title: Build user profile page
  status: pending
  priority: medium
  depends_on:
  - 1
  created: 2026-02-05
