crates/yaml-db/tests/snapshots/golden_tests__metadata_no_counters.snap
---
source: crates/yaml-db/tests/golden_tests.rs
expression: yaml_content
---
schema_version: '1.0'
project:
  title: Untitled Project
  created: 2026-02-06
