crates/yaml-db/tests/snapshots/golden_tests__task_all_fields.snap
---
source: crates/yaml-db/tests/golden_tests.rs
expression: yaml_content
---
tasks:
- id: 42
  feature: payments
  discipline: backend
  title: Integrate Stripe payment gateway
  description: Add Stripe integration for subscription payments
  status: in_progress
  priority: critical
  tags:
  - payments
  - stripe
  - billing
  depends_on:
  - 10
  - 15
  - 20
  blocked_by: Waiting for legal approval
  created: 2024-01-10
  updated: 2024-01-20
  acceptance_criteria:
  - Customers can subscribe to monthly plan
  - Customers can subscribe to annual plan
  - Webhook handles payment success
  - Webhook handles payment failure
