crates/yaml-db/tests/snapshots/golden_tests__task_minimal_fields.snap
---
source: crates/yaml-db/tests/golden_tests.rs
expression: yaml_content
---
tasks:
- id: 1
  feature: simple
  discipline: backend
  title: Simple task
  status: pending
